<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ssdk_alipay">支付宝好友</string>
    <string name="ssdk_alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
    <string name="ssdk_bluetooth">蓝牙</string>
    <string name="ssdk_douban">豆瓣</string>
    <string name="ssdk_dropbox">Dropbox</string>
    <string name="ssdk_email">邮件</string>
    <string name="ssdk_evernote">印象笔记</string>
    <string name="ssdk_facebook">Facebook</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_facebookmessenger_client_inavailable">目前您的FacebookMessenger版本过低或未安装，需要安装才能使用</string>
    <string name="ssdk_flickr">Flickr</string>
    <string name="ssdk_foursquare">FourSquare</string>
    <string name="ssdk_google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="ssdk_googleplus">Google+</string>
    <string name="ssdk_instagram">Instagram</string>
    <string name="ssdk_instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="ssdk_instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="ssdk_instapaper">Instapaper</string>
    <string name="ssdk_instapaper_email">邮箱</string>
    <string name="ssdk_instapaper_login">登录</string>
    <string name="ssdk_instapaper_logining">登录中…</string>
    <string name="ssdk_instapaper_pwd">密码</string>
    <string name="ssdk_kaixin">开心网</string>
    <string name="ssdk_kakaostory">KakaoStory</string>
    <string name="ssdk_kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="ssdk_kakaotalk">KakaoTalk</string>
    <string name="ssdk_kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="ssdk_laiwang">来往</string>
    <string name="ssdk_laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="ssdk_laiwangmoments">来往动态</string>
    <string name="ssdk_line">Line</string>
    <string name="ssdk_line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="ssdk_linkedin">领英</string>
    <string name="ssdk_mingdao">明道</string>
    <string name="ssdk_mingdao_share_content">网页分享</string>
    <string name="ssdk_neteasemicroblog">网易微博</string>
    <string name="ssdk_oks_cancel">取消</string>
    <string name="ssdk_oks_confirm">确定</string>
    <string name="ssdk_oks_contacts">联系人</string>
    <string name="ssdk_oks_multi_share">图文分享</string>
    <string name="ssdk_oks_pull_to_refresh">下拉刷新</string>
    <string name="ssdk_oks_refreshing">刷新中…</string>
    <string name="ssdk_oks_release_to_refresh">松开刷新</string>
    <string name="ssdk_oks_share">分享</string>
    <string name="ssdk_oks_share_canceled">分享已取消</string>
    <string name="ssdk_oks_share_completed">分享成功</string>
    <string name="ssdk_oks_share_failed">分享失败</string>
    <string name="ssdk_oks_sharing">分享操作正在后台进行…</string>
    <string name="ssdk_pinterest">Pinterest</string>
    <string name="ssdk_pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="ssdk_pocket">Pocket</string>
    <string name="ssdk_qq">QQ</string>
    <string name="ssdk_qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="ssdk_qzone">QQ空间</string>
    <string name="ssdk_renren">人人网</string>
    <string name="ssdk_share_to_mingdao">分享到明道</string>
    <string name="ssdk_share_to_qq">分享到QQ</string>
    <string name="ssdk_share_to_qzone">分享到QQ空间</string>
    <string name="ssdk_share_to_qzone_default">来自%s的分享</string>
    <string name="ssdk_shortmessage">信息</string>
    <string name="ssdk_sinaweibo">新浪微博</string>
    <string name="ssdk_sohumicroblog">搜狐微博</string>
    <string name="ssdk_sohusuishenkan">搜狐随身看</string>
    <string name="ssdk_tencentweibo">腾讯微博</string>
    <string name="ssdk_tumblr">Tumblr</string>
    <string name="ssdk_twitter">Twitter</string>
    <string name="ssdk_use_login_button">请改用“登录”按钮</string>
    <string name="ssdk_vkontakte">VK</string>
    <string name="ssdk_website">http://www.mob.com</string>
    <string name="ssdk_wechat">微信好友</string>
    <string name="ssdk_wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="ssdk_wechatfavorite">微信收藏</string>
    <string name="ssdk_wechatmoments">微信朋友圈</string>
    <string name="ssdk_weibo_oauth_regiseter">应用授权</string>
    <string name="ssdk_weibo_upload_content">分享图片</string>
    <string name="ssdk_whatsapp">WhatsApp</string>
    <string name="ssdk_whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="ssdk_yixin">易信</string>
    <string name="ssdk_yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="ssdk_yixinmoments">易信朋友圈</string>
    <string name="ssdk_youdao">有道云笔记</string>
    <string name="DeepSleep_time_day_title">日均深睡时长</string>
    <string name="DeepSleep_time_title">深睡时长</string>
    <string name="E_mail">E-mail</string>
    <string name="RemaindFri">五</string>
    <string name="RemaindMon">一</string>
    <string name="RemaindSat">六</string>
    <string name="RemaindSun">日</string>
    <string name="RemaindThu">四</string>
    <string name="RemaindTue">二</string>
    <string name="RemaindWen">三</string>
    <string name="alarm_customize">自定义</string>
    <string name="cancle">取消</string>
    <string name="china">中国</string>
    <string name="country_adress">国家/地区</string>
    <string name="email_regist">使用邮箱注册</string>
    <string name="explain_frgment3_tip1">有氧运动是指人体在氧气充分供应的情况下进行的体育锻炼。即在运动过程中，人体吸入的氧气与需求相等，达到生理上的平衡状态。简单来说，有氧运动是指任何富韵律性的运动，其运动时间较长（约15分钟或以上），运动强度在中等或中上的程度。有氧运动是一种恒常运动，是持续5分钟以上还有余力的运动。</string>
    <string name="explain_frgment3_tip2">强度低，有节奏，持续时间较长。要求每次锻炼的时间不少于30分钟，每周坚持3到5次。这种锻炼，氧气能充分燃烧（即氧化）体内的糖分，还可消耗体内脂肪，增强和改善心肺功能，预防骨质疏松，调节心理和精神状态，是健身的主要运动方式。</string>
    <string name="explain_frgment3_tip3">如果体重超标，要想通过运动来达到减肥的目的，建议选择有氧运动，像慢跑、骑自行车。</string>
    <string name="explain_frgment3_tip4">在跑步之前，打开蓝牙连接手环。</string>
    <string name="explain_frgment3_title1">什么是有氧运动</string>
    <string name="explain_frgment3_title2">有氧运动特点</string>
    <string name="explain_frgment3_title3">有氧运动与减肥</string>
    <string name="explain_tab3">有氧运动</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_email_code">请输入验证码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_phone_tip">请输入手机号码</string>
    <string name="input_pwd_tip">密码支持数字、字母和特殊字符，长度6-16位</string>
    <string name="next_move">下一步</string>
    <string name="phone_regist">手机注册</string>
    <string name="re_input_new_pwd">请再次输入密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="reset_your_pwd">请重设您的密码</string>
    <string name="sms_code">短信验证码</string>
    <string name="sure_str">确定</string>
    <string name="user_email_regist">使用邮箱注册</string>
    <string name="user_phone_regist">使用手机注册</string>
</resources>