<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/app_bg" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/y96">
        <ImageButton android:id="@id/btn_back" android:background="@drawable/btn_return_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
        <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="18.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/explain_tab3" android:layout_centerInParent="true" />
    </RelativeLayout>
    <View android:background="@color/rl_title_line" android:layout_width="fill_parent" android:layout_height="@dimen/y1" />
    <ScrollView android:paddingLeft="@dimen/x24" android:paddingRight="@dimen/x24" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="15.0dip" android:textColor="#ffdedede" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/y30" android:text="@string/explain_frgment3_title1" />
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="14.0dip" android:textColor="#ffa3a3a3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/y30" android:text="@string/explain_frgment3_tip1" />
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="15.0dip" android:textColor="#ffdedede" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/y54" android:text="@string/explain_frgment3_title2" />
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="14.0dip" android:textColor="#ffa3a3a3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/y30" android:text="@string/explain_frgment3_tip2" />
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="15.0dip" android:textColor="#ffdedede" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/y46" android:text="@string/explain_frgment3_title3" />
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="14.0dip" android:textColor="#ffa3a3a3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/y30" android:text="@string/explain_frgment3_tip3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>