<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="15.0dip" android:textColor="#ff4d4d4d" android:gravity="center" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/alarm_customize" />
    <View android:background="@color/black_15" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/title_alarm" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="36.0dip" android:layout_marginBottom="20.0dip">
        <CheckBox android:textSize="14.0dip" android:textColor="@drawable/mz_alarm_custom_text_color" android:gravity="center" android:id="@id/radio_mon" android:background="@drawable/alarm_custom_week_bg" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:button="@null" android:text="@string/RemaindMon" />
        <CheckBox android:textSize="14.0dip" android:textColor="@drawable/mz_alarm_custom_text_color" android:gravity="center" android:id="@id/radio_tue" android:background="@drawable/alarm_custom_week_bg" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:button="@null" android:text="@string/RemaindTue" />
        <CheckBox android:textSize="14.0dip" android:textColor="@drawable/mz_alarm_custom_text_color" android:gravity="center" android:id="@id/radio_wen" android:background="@drawable/alarm_custom_week_bg" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:button="@null" android:text="@string/RemaindWen" />
        <CheckBox android:textSize="14.0dip" android:textColor="@drawable/mz_alarm_custom_text_color" android:gravity="center" android:id="@id/radio_thu" android:background="@drawable/alarm_custom_week_bg" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:button="@null" android:text="@string/RemaindThu" />
        <CheckBox android:textSize="14.0dip" android:textColor="@drawable/mz_alarm_custom_text_color" android:gravity="center" android:id="@id/radio_fra" android:background="@drawable/alarm_custom_week_bg" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:button="@null" android:text="@string/RemaindFri" />
        <CheckBox android:textSize="14.0dip" android:textColor="@drawable/mz_alarm_custom_text_color" android:gravity="center" android:id="@id/radio_sat" android:background="@drawable/alarm_custom_week_bg" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="15.0dip" android:button="@null" android:text="@string/RemaindSat" />
        <CheckBox android:textSize="14.0dip" android:textColor="@drawable/mz_alarm_custom_text_color" android:gravity="center" android:id="@id/radio_sun" android:background="@drawable/alarm_custom_week_bg" android:layout_width="25.0dip" android:layout_height="25.0dip" android:button="@null" android:text="@string/RemaindSun" />
    </LinearLayout>
    <View android:id="@id/line_ab" android:background="@color/black_15" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/lineat_alarm" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="58.0dip" android:layout_below="@id/line_ab" android:layout_centerHorizontal="true">
        <RelativeLayout android:id="@id/dialog_cancle" android:background="@drawable/btn_exit_selector" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="18.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancle" android:layout_centerInParent="true" />
        </RelativeLayout>
        <View android:background="@color/black_15" android:layout_width="0.5dip" android:layout_height="fill_parent" />
        <RelativeLayout android:id="@id/dialog_sure" android:background="@drawable/btn_exit_selector" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="18.0dip" android:textColor="#ff5ed1dc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sure_str" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>