<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/mz_act_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/y96">
        <ImageButton android:id="@id/ib_back" android:background="@drawable/mz_btn_return_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/y22" android:layout_centerVertical="true" />
        <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="18.0dip" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_pwd" android:layout_centerInParent="true" />
    </RelativeLayout>
    <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="16.0dip" android:textColor="#ffc0c0c0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x76" android:layout_marginTop="@dimen/y167" android:text="@string/reset_your_pwd" />
    <com.meizu.smart.wristband.meizuUI.font.BaseEditText android:textSize="14.0dip" android:textColor="@color/black" android:textColorHint="@color/mz_activity_login_et_hint" android:id="@id/edt_rePwd1" android:background="@drawable/mz_edittext_select" android:paddingLeft="@dimen/x30" android:layout_width="fill_parent" android:layout_height="@dimen/y81" android:layout_marginLeft="@dimen/x48" android:layout_marginTop="@dimen/y20" android:layout_marginRight="@dimen/x51" android:hint="@string/input_new_pwd" android:maxLength="16" android:inputType="textPassword" />
    <com.meizu.smart.wristband.meizuUI.font.BaseEditText android:textSize="14.0dip" android:textColor="@color/black" android:textColorHint="@color/mz_activity_login_et_hint" android:id="@id/edt_rePwd2" android:background="@drawable/mz_edittext_select" android:paddingLeft="@dimen/x30" android:layout_width="fill_parent" android:layout_height="@dimen/y81" android:layout_marginLeft="@dimen/x48" android:layout_marginTop="@dimen/y46" android:layout_marginRight="@dimen/x51" android:hint="@string/re_input_new_pwd" android:maxLength="16" android:inputType="textPassword" />
    <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="10.0dip" android:textColor="@color/mz_black_aplha30" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x76" android:layout_marginTop="@dimen/y24" android:layout_marginRight="@dimen/x76" android:text="@string/input_pwd_tip" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.meizu.smart.wristband.meizuUI.font.BaseButton android:enabled="false" android:textSize="18.0dip" android:textColor="#ffffffff" android:id="@id/btn_next" android:background="@drawable/mz_button_select" android:layout_width="fill_parent" android:layout_height="@dimen/y90" android:layout_marginLeft="@dimen/x94" android:layout_marginRight="@dimen/x94" android:layout_marginBottom="@dimen/y140" android:text="@string/next_move" android:layout_alignParentBottom="true" android:textAllCaps="false" />
    </RelativeLayout>
</LinearLayout>