<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/y96">
        <ImageButton android:id="@id/ib_back" android:background="@drawable/btn_return_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
        <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="18.0dip" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_regist" android:layout_centerInParent="true" />
    </RelativeLayout>
    <View android:background="@color/rl_title_line" android:layout_width="fill_parent" android:layout_height="@dimen/y1" />
    <RelativeLayout android:id="@id/rala_chose_country" android:background="@drawable/edittext_select" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/y102" android:layout_marginLeft="@dimen/x76" android:layout_marginTop="@dimen/y42" android:layout_marginRight="@dimen/x76">
        <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="14.0dip" android:textColor="#ffc0c0c0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x30" android:text="@string/country_adress" android:layout_centerVertical="true" />
        <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="14.0dip" android:textColor="#fffec305" android:id="@id/tv_chosed_country" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x28" android:text="@string/china" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:background="@drawable/edittext_select" android:layout_width="fill_parent" android:layout_height="@dimen/y102" android:layout_marginLeft="@dimen/x76" android:layout_marginTop="@dimen/y20" android:layout_marginRight="@dimen/x76">
        <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="14.0dip" android:textColor="#ffc0c0c0" android:id="@id/tv_chosed_country_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x30" android:text="+86" android:layout_centerVertical="true" />
        <EditText android:textSize="14.0dip" android:textColor="#ffffffff" android:textColorHint="#ff6b6e76" android:id="@id/et_telphone_num" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x180" android:hint="@string/input_phone_tip" android:maxLength="20" android:layout_centerVertical="true" android:inputType="phone" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/edittext_select" android:layout_width="fill_parent" android:layout_height="@dimen/y102" android:layout_marginLeft="@dimen/x76" android:layout_marginTop="@dimen/y20" android:layout_marginRight="@dimen/x76">
        <com.meizu.smart.wristband.meizuUI.font.BaseEditText android:textSize="14.0dip" android:textColor="#ffffffff" android:textColorHint="#ff6b6e76" android:id="@id/et_pin_num" android:background="@android:color/transparent" android:paddingLeft="@dimen/x28" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/sms_code" android:maxLength="10" android:layout_weight="172.0" android:inputType="number" />
        <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="12.0dip" android:textColor="#ffc0c0c0" android:gravity="center" android:id="@id/tv_left_num" android:background="@drawable/rect_selector" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/get_sms_code" android:layout_weight="113.0" android:layout_alignParentRight="true" />
    </LinearLayout>
    <com.meizu.smart.wristband.meizuUI.font.BaseTextView android:textSize="13.0dip" android:textColor="#ffc0c0c0" android:id="@id/tv_goto_email_regist" android:padding="@dimen/x14" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x76" android:layout_marginTop="@dimen/y12" android:text="@string/user_email_regist" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.meizu.smart.wristband.meizuUI.font.BaseButton android:textSize="18.0dip" android:textColor="#ffffffff" android:id="@id/btn_next" android:background="@drawable/login_button_select" android:layout_width="fill_parent" android:layout_height="@dimen/y90" android:layout_marginLeft="@dimen/x94" android:layout_marginRight="@dimen/x94" android:layout_marginBottom="@dimen/y140" android:text="@string/next_move" android:layout_alignParentBottom="true" android:textAllCaps="false" />
    </RelativeLayout>
</LinearLayout>